--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
   "name": "solidity-rlp",
+  "author": "Hamdi Allam <hamdi.allam97@gmail.com>",
   "version": "1.0.0",
   "description": "solidity rlp encoder/decoder",
+  "keywords": ["solidity", "rlp", "decoding", "smart contract", "ethereum"],
   "main": "truffle.js",
+  "files": ["contracts", "test"],
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "truffle test"
+    "test": "truffle test",
+    "console": "truffle console"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hamdiallam/solidity-rlp.git"
+    "url": "https://github.com/hamdiallam/solidity-rlp.git"
   },
   "author": "Hamdi Allam",
-  "license": "ISC",
+  "license": "SEE LICENSE IN LICENSE",
   "bugs": {
-    "url": "https://github.com/hamdiallam/solidity-rlp/issues"
+    "url": "https://github.com/hamdiallam/solidity-rlp/issues",
   },
   "homepage": "https://github.com/hamdiallam/solidity-rlp#readme",
+  "devDependencies": {
+   "chai": "^4.1.2"
+  },
   "dependencies": {
-    "chai": "^4.1.2",
     "rlp": "^2.0.0"
   }
 }
