--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solidity-rlp",
   "author": "Hamdi Allam",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "solidity rlp encoder/decoder",
   "keywords": [
     "solidity",
@@ -19,8 +19,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "truffle test",
-    "console": "truffle console"
+    "test": "truffle test"
   },
   "repository": {
     "type": "git",
