--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solidity-rlp",
   "author": "Hamdi Allam",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "solidity rlp encoder/decoder",
   "keywords": [
     "solidity",
@@ -31,9 +31,7 @@
   },
   "homepage": "https://github.com/hamdiallam/solidity-rlp#readme",
   "devDependencies": {
-    "chai": "^4.1.2"
-  },
-  "dependencies": {
+    "chai": "^4.1.2",
     "rlp": "^2.0.0"
   }
 }
