--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,10 @@ language: node_js
 node_js: "node"
 
 before_script:
-  - npm install -g truffle@5.1.36
+  - npm install -g truffle@5.1.36 ganache-cli@6.9.1
   - npm install
 
 script: 
+  - ganache-cli > /dev/null &
+  - sleep 5
   - npm run test
