support 0x80 as a false boolean encoding (#6)
* support 0x80 as a false boolean encoding

* fix travis

* add back in ganache into travis

* bump truffle/ganache versions

* commit to a single truffle config file

* specify ganache port in travis

* show ganache output

* use node verison 12 and supress output

* fix travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
 language: node_js
 
-node_js: "node"
+node_js:
+  - 12
 
 before_script:
-  - npm install -g truffle@5.0.1 ganache-cli@6.1.8
+  - npm install -g truffle@5.1.41 ganache-cli@6.10.1
   - npm install
 
 script: 
-  - ganache-cli > /dev/null &
+  - ganache-cli -p 8545 > /dev/null &
   - sleep 5
-  - rm -rf build
-  - truffle migrate
-  - truffle test
+  - npm run test
